--- a/package.json
+++ b/package.json
@@ -13,17 +13,18 @@
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "leaflet": "^1.9.4",
     "react-leaflet": "^4.2.1",
+    "react-leaflet-cluster": "^4.0.0",
+    "react-scripts": "5.0.1",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.8",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@types/leaflet": "^1.9.8",
     "gh-pages": "^6.1.0"
   },
   "keywords": [
